infra/k8s/deployment-dashboard-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-backend
  namespace: openrisk
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dashboard-backend
  template:
    metadata:
      labels:
        app: dashboard-backend
    spec:
      containers:
        - name: dashboard-backend
          image: alexdembele/openrisk-dashboard-backend:latest
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
